# docs/swagger.json
@@ -1,8 +1,10 @@
 {
     "swagger": "2.0",
     "info": {
+        "title": "gd-demo",
         "contact": {},
-        "license": {}
+        "license": {},
+        "version": "1.0"
     },
     "paths": {
         "/v1/getUserInfo": {
@@ -35,6 +37,67 @@
                             "$ref": "#/definitions/user.GetUserInfoRes"
                         }
                     }
+                }
+            }
+        },
+        "/v1/login": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "用户"
+                ],
+                "summary": "用户登录",
+                "parameters": [
+                    {
+                        "description": "请求参数",
+                        "name": "entity",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/user.LoginReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/user.LoginRes"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/register": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "用户"
+                ],
+                "summary": "注册或更新用户信息",
+                "parameters": [
+                    {
+                        "description": "请求参数",
+                        "name": "entity",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/user.RegisterOrUpdateReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {}
                 }
             }
         },
@@ -101,6 +164,39 @@
             }
         },
         "user.GetUserInfoRes": {
+            "type": "object",
+            "properties": {
+                "nickname": {
+                    "type": "string"
+                },
+                "passport": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "integer"
+                }
+            }
+        },
+        "user.LoginReq": {
+            "type": "object",
+            "properties": {
+                "passport": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "integer"
+                }
+            }
+        },
+        "user.LoginRes": {
+            "type": "object",
+            "properties": {
+                "sessionId": {
+                    "type": "string"
+                }
+            }
+        },
+        "user.RegisterOrUpdateReq": {
             "type": "object",
             "properties": {
                 "nickname": {
